sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__accountLink__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__accountLink__c</fullName>
    <formula>if(  ISBLANK( SmartViscaf__account__c ) , image( &quot;/resource/SmartViscaf__&quot; &amp; $Label.smartviscaf__sb_text_unregisteredicon,  $Label.smartviscaf__sb_msg_unregistered ) , HYPERLINK( &quot;/&quot; &amp;  SmartViscaf__account__r.Id ,  SmartViscaf__account__r.Name ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先</label>
    <type>Text</type>
</CustomField>