sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__accountRegDateTime__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__accountRegDateTime__c</fullName>
    <description>名刺を取引先と取引先責任者に登録した日時</description>
    <label>取引先取込日時</label>
    <type>DateTime</type>
</CustomField>