sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__address_bld__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__address_bld__c</fullName>
    <label>建物名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>