sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__bk_image__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__bk_image__c</fullName>
    <formula>if( isblank(SmartViscaf__bk_image_id__c) , null , image(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; SmartViscaf__bk_image_id__c , &quot;裏面&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>裏面</label>
    <type>Text</type>
</CustomField>