sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__bk_thumbnail_id__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__bk_thumbnail_id__c</fullName>
    <label>裏サムネイルID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>