sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__card_exchange_date__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__card_exchange_date__c</fullName>
    <label>名刺交換日</label>
    <type>Date</type>
</CustomField>