sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__card_id__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__card_id__c</fullName>
    <label>名刺ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>