sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__company_name_kana__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__company_name_kana__c</fullName>
    <label>会社名カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>