sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__contact__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>名刺</relationshipLabel>
    <relationshipName>nc_contact</relationshipName>
    <type>Lookup</type>
</CustomField>