sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__direction__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__direction__c</fullName>
    <description>0: 横画像
1: 縦画像</description>
    <inlineHelpText>0: 横画像
1: 縦画像</inlineHelpText>
    <label>表画像縦横フラグ</label>
    <length>1</length>
    <type>Text</type>
</CustomField>