sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__division__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__division__c</fullName>
    <label>所属</label>
    <length>255</length>
    <type>Text</type>
</CustomField>