sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__email__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__email__c</fullName>
    <label>メールアドレス</label>
    <type>Email</type>
</CustomField>