sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__env_machine_name__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__env_machine_name__c</fullName>
    <description>スキャンを実行したPCのWindowsコンピュータ名</description>
    <label>コンピュータ名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>