sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__error__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__error__c</fullName>
    <label>エラー情報</label>
    <type>TextArea</type>
</CustomField>