sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__fax1__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__fax1__c</fullName>
    <label>FAX番号</label>
    <type>Phone</type>
</CustomField>