sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__fax2__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__fax2__c</fullName>
    <label>FAX番号2</label>
    <type>Phone</type>
</CustomField>