sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__freehandmemo__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__freehandmemo__c</fullName>
    <label>手書きメモ</label>
    <type>TextArea</type>
</CustomField>