sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__freehandmemo_flag__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__freehandmemo_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>手書きメモも入力する</label>
    <type>Checkbox</type>
</CustomField>