sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__GeoLocation__c</fullName>
    <label>緯度経度</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>