sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__GetJinjiIdoDate__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__GetJinjiIdoDate__c</fullName>
    <label>人事異動情報取得日</label>
    <type>Date</type>
</CustomField>