sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__GetJinjiIdoExec__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__GetJinjiIdoExec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>人事異動情報取得中</label>
    <type>Checkbox</type>
</CustomField>