sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__google_map__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__google_map__c</fullName>
    <formula>HYPERLINK( &quot;http://maps.google.co.jp/maps?hl=ja&amp;gl=jp&amp;q=&quot;&amp; SmartViscaf__address__c,&quot;Map&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Map</label>
    <type>Text</type>
</CustomField>