sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__isNotOverContactwrite__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__isNotOverContactwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>既存取引先責任者上書き不可</label>
    <type>Checkbox</type>
</CustomField>