sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__key__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__key__c</fullName>
    <description>同じ名刺を特定するためのキー。氏名とメールアドレスを&amp;で接続したもの。</description>
    <externalId>true</externalId>
    <label>キー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>