sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__last_name__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__last_name__c</fullName>
    <description>英語名刺の場合</description>
    <label>ラストネーム</label>
    <length>80</length>
    <type>Text</type>
</CustomField>