sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__lead__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>リード</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>名刺</relationshipLabel>
    <relationshipName>nc_lead</relationshipName>
    <type>Lookup</type>
</CustomField>