sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__list_name__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__list_name__c</fullName>
    <label>リスト名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>