sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__name_kana__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__name_kana__c</fullName>
    <formula>IF(ISBLANK( SmartViscaf__last_name__c ) , 
  SmartViscaf__person_name_last_kana__c &amp; SmartViscaf__person_name_first_kana__c,
  SmartViscaf__last_name__c  &amp;  SmartViscaf__first_name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>氏名カナ</label>
    <type>Text</type>
</CustomField>