sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__person_name_first__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__person_name_first__c</fullName>
    <label>名</label>
    <length>127</length>
    <type>Text</type>
</CustomField>