sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__person_name_first_kana__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__person_name_first_kana__c</fullName>
    <label>名カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>