sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__Person_Name_Last_Kana_1st__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__Person_Name_Last_Kana_1st__c</fullName>
    <formula>IF( ISBLANK ( SmartViscaf__person_name_last_kana__c ) ,
IF (ISBLANK ( SmartViscaf__last_name__c ) , null , LEFT ( SmartViscaf__last_name__c , 1 )) ,
LEFT ( SmartViscaf__person_name_last_kana__c , 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>姓カナの1文字目</label>
    <type>Text</type>
</CustomField>