sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__Person_Name_Last_Kana_1stA__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__Person_Name_Last_Kana_1stA__c</fullName>
    <formula>IF(FIND(SmartViscaf__Person_Name_Last_Kana_1st__c,&apos;アイウエオ&apos;)&lt;&gt; 0, &apos;ア&apos;,                             
IF(FIND(SmartViscaf__Person_Name_Last_Kana_1st__c,&apos;カキクケコガギグゲゴ&apos;) &lt;&gt; 0, &apos;カ&apos;,                       
IF(FIND(SmartViscaf__Person_Name_Last_Kana_1st__c,&apos;サシスセソザジズセゾ&apos;) &lt;&gt; 0, &apos;サ&apos;,                     
IF(FIND(SmartViscaf__Person_Name_Last_Kana_1st__c,&apos;タチツテトダヂヅデド&apos;) &lt;&gt; 0, &apos;タ&apos;,                     
IF(FIND(SmartViscaf__Person_Name_Last_Kana_1st__c,&apos;ナニヌネノ&apos;) &lt;&gt; 0, &apos;ナ&apos;,                     
IF(FIND(SmartViscaf__Person_Name_Last_Kana_1st__c,&apos;ハヒフヘホバビブベボパピプペポ&apos;) &lt;&gt; 0, &apos;ハ&apos;,              
IF(FIND(SmartViscaf__Person_Name_Last_Kana_1st__c,&apos;マミムメモ&apos;) &lt;&gt; 0, &apos;マ&apos;,                     
IF(FIND(SmartViscaf__Person_Name_Last_Kana_1st__c,&apos;ヤユヨ&apos;) &lt;&gt; 0, &apos;ヤ&apos;,                     
IF(FIND(SmartViscaf__Person_Name_Last_Kana_1st__c,&apos;ワヲン&apos;) &lt;&gt; 0, &apos;ワ&apos;,&apos;&apos;)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>姓カナの1文字目ア段</label>
    <type>Text</type>
</CustomField>