sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__portrait__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__portrait__c</fullName>
    <formula>if( isblank( SmartViscaf__portrait_id__c ) , null , hyperlink(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; SmartViscaf__portrait_id__c , image(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; SmartViscaf__portrait_id__c , &quot;写真&quot;, 160 , 120 ) , &quot;_blank&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>写真</label>
    <type>Text</type>
</CustomField>