sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__portrait_id__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__portrait_id__c</fullName>
    <label>写真ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>