sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__RenkeiMessage__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiMessage__c</fullName>
    <label>自動連携処理情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>