sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__tel1__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__tel1__c</fullName>
    <label>電話番号</label>
    <type>Phone</type>
</CustomField>