sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__tenshokuzumi__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__tenshokuzumi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>転職済み</label>
    <type>Checkbox</type>
</CustomField>