sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__thumbnail__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__thumbnail__c</fullName>
    <formula>if(isblank(SmartViscaf__image_id__c) || isblank(SmartViscaf__width__c) || isblank(SmartViscaf__height__c) , null , hyperlink( &quot;/servlet/servlet.FileDownload?file=&quot; &amp; SmartViscaf__image_id__c , image(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; SmartViscaf__image_id__c  , &quot;サムネイル&quot; , SmartViscaf__height__c / 4 , SmartViscaf__width__c / 4) ,  &quot;_blank&quot; ) )</formula>
    <label>サムネイル</label>
    <type>Text</type>
</CustomField>