sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__thumbnail_base64__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__thumbnail_base64__c</fullName>
    <description>iphone用</description>
    <label>base64サムネイル</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>