sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__Title_and_Name__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__Title_and_Name__c</fullName>
    <formula>SmartViscaf__title_name__c &amp; &quot;   &quot; &amp; IMAGE(&quot;/img/icon/profile24.png&quot;, &quot;icon&quot;) &amp; &quot; &quot; &amp; Name</formula>
    <label>役職</label>
    <type>Text</type>
</CustomField>