sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__title_name__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__title_name__c</fullName>
    <label>役職</label>
    <length>255</length>
    <type>Text</type>
</CustomField>