sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__web_url1__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__web_url1__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>