sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/fields/SmartViscaf__width__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__width__c</fullName>
    <description>単位: pixel</description>
    <label>表画像横サイズ</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>