sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/validationRules/SmartViscaf__DisableQueueOnHistoryTrigger.validationRule-meta.xml
<ValidationRule>
    <fullName>SmartViscaf__DisableQueueOnHistoryTrigger</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Setup.SmartViscaf__SmartViscaConfig__c.SmartViscaf__TriggerHistoryIsActive__c, LEFT(OwnerId, 3) = &quot;00G&quot;)</errorConditionFormula>
    <errorMessage>「トリガで名刺履歴を保存する」がオンの場合、所有者にキューを選択できません。</errorMessage>
</ValidationRule>