sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/listViews/SmartViscaf__myNameCard.listView-meta.xml
<ListView>
    <fullName>SmartViscaf__myNameCard</fullName>
    <columns>NAME</columns>
    <columns>SmartViscaf__person_name_last_kana__c</columns>
    <columns>SmartViscaf__company_name__c</columns>
    <columns>SmartViscaf__division__c</columns>
    <columns>SmartViscaf__title_name__c</columns>
    <columns>SmartViscaf__tel1__c</columns>
    <columns>SmartViscaf__email__c</columns>
    <columns>SmartViscaf__card_exchange_date__c</columns>
    <columns>SmartViscaf__list_name__c</columns>
    <filterScope>Mine</filterScope>
    <label>07 私の名刺</label>
</ListView>