sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/listViews/SmartViscaf__thisWeek.listView-meta.xml
<ListView>
    <fullName>SmartViscaf__thisWeek</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>SmartViscaf__company_name__c</columns>
    <columns>SmartViscaf__division__c</columns>
    <columns>SmartViscaf__title_name__c</columns>
    <columns>SmartViscaf__tel1__c</columns>
    <columns>SmartViscaf__list_name__c</columns>
    <columns>SmartViscaf__email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>SmartViscaf__card_exchange_date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SmartViscaf__card_exchange_date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>03 今週の名刺</label>
    <language>ja</language>
</ListView>