sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCard__c/listViews/SmartViscaf__today.listView-meta.xml
<ListView>
    <fullName>SmartViscaf__today</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>SmartViscaf__delivery_icon__c</columns>
    <columns>NAME</columns>
    <columns>SmartViscaf__company_name__c</columns>
    <columns>SmartViscaf__division__c</columns>
    <columns>SmartViscaf__title_name__c</columns>
    <columns>SmartViscaf__tel1__c</columns>
    <columns>SmartViscaf__email__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>SmartViscaf__card_exchange_date__c</columns>
    <columns>SmartViscaf__list_name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SmartViscaf__card_exchange_date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>01 今日の名刺</label>
</ListView>